--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,8 +1,8 @@
 html, body {
-    height: 100vh;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: #f5f5f7;
 }
 
 #__nuxt {
